[package]
name = "streamcore-rust-sdk"
repository = "https://github.com/streamcoreai/rust-sdk"
version = "0.1.3"
edition = "2021"
rust-version = "1.87"
description = "Rust SDK for connecting to a StreamCore server via WebRTC + WHIP"
license = "MIT"
keywords = ["webrtc", "whip", "voice-agent", "pion", "real-time"]

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
webrtc = "0.17"
thiserror = "2"
tracing = "0.1"
audiopus = "0.3.0-rc.0"
bytes = "1"
